--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@astrojs/react": "^3.6.3",
     "@astrojs/tailwind": "^5.1.2",
     "astro": "^5.0.0-beta.12",
+    "express": "^4.21.2",
     "landing-ia": "file:",
     "nvm": "^0.0.4",
     "react": "^18.3.1",
